--- a/src/main/resources/templates/staffinformation.html
+++ b/src/main/resources/templates/staffinformation.html
@@ -17,7 +17,7 @@
   <h4>Enter the details for the new staff member</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addemployee}" th:object="${Employee}">
-      <div class="form-name">Name<sup>*</sup></div>
+      <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="Id" 
                 th:field="*{Id}" placeholder="Id of the employee" required />
@@ -28,7 +28,7 @@
       <input style="font-family: Quicksand, sans-serif;" type="number" id="PhoneNumber" 
                 th:field="*{PhoneNumber}" placeholder="Phone number of the employee" required />
       <br>
-      <input style="font-family: Quicksand, sans-serif;" type="test" id="Role" 
+      <input style="font-family: Quicksand, sans-serif;" type="text" id="Role" 
                 th:field="*{Role}" placeholder="Role of the employee" required />
       <br>
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
