--- a/src/main/resources/templates/WarrantyClaiminformation.html
+++ b/src/main/resources/templates/WarrantyClaiminformation.html
@@ -11,22 +11,18 @@
 
 <body>
   <main>
-  <h1>Add a new Part's details</h1>
-  <h2>Data of an Part will be taken from this page and submitted into both 
-        PartList and PartDesciption tables</h2>
-  <h4>Enter the details for the new Part</h4>
+  <h1>Add a new Warranty Claim's details</h1>
+  <h2></h2>
+  <h4>Enter the details for the new Warranty Claim</h4>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/addpart}" th:object="${Part}">
+    <form action="#" method="post" th:action="@{/addwarrantyclaim}" th:object="${WarrantyClaim}">
       <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
 
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="PartID" 
-                th:field="*{PartID}" placeholder="Id of the Part" required />
+      <input style="font-family: Quicksand, sans-serif;" type="number" id="WarrantyID" 
+                th:field="*{WarrantyID}" placeholder="Id of the Warranty" required />
       <br>
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="PartName" 
-                th:field="*{PartName}" placeholder="Name of the Part" required />
-      <br>
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="PartDescription" 
-                th:field="*{PartDescription}" placeholder="Description of the Part" required />
+      <input style="font-family: Quicksand, sans-serif;" type="text" id="Brand" 
+                th:field="*{Brand}" placeholder="Brand of the Warranty" required />
       <br>
 
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
