added a menu to navigate pages

--- a/src/main/resources/templates/partinformation.html
+++ b/src/main/resources/templates/partinformation.html
@@ -14,6 +14,9 @@
   <h1>Add a new Part's details</h1>
   <h2>Data of an Part will be taken from this page and submitted into both 
         PartList and PartDesciption tables</h2>
+
+  <a href="" class="btn btn-danger">Menu</a>
+
   <h4>Enter the details for the new Part</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addpart}" th:object="${Part}">
