added some more pages and formatted a menu with links

--- a/src/main/resources/templates/customerinformation.html
+++ b/src/main/resources/templates/customerinformation.html
@@ -12,6 +12,7 @@
 <body>
   <main>
   <h1>Add a new Customer's details</h1>
+  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h2>Data of an Customer will be taken from this page and submitted into both 
         Customers and AddressBook tables</h2>
   <h4>Enter the details for the new Customer</h4>
