--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -31,9 +31,9 @@
               Staff Information
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Staff Information</a></li>
-              <li><a class="dropdown-item" href="#">Submit a Work Report</a></li>
-              <li><a class="dropdown-item" href="#">Certifications</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/staffinformation.html">Staff Information</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/technicianworkreport.html">Submit a Work Report</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/certificationsinformation.html">Certifications</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -41,9 +41,9 @@
               Customer's Work Orders
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Work Orders</a></li>
-              <li><a class="dropdown-item" href="#">Customer Information</a></li>
-              <li><a class="dropdown-item" href="#">Warranty Claims</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/submitworkorder.html">Work Orders</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/customerinformation.html">Customer Information</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/warrantyclaiminformation.html">Warranty Claims</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -51,8 +51,8 @@
               Item Information
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Parts</a></li>
-              <li><a class="dropdown-item" href="#">Tools</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/partinformation.html">Parts</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/toolinformation.html">Tools</a></li>
               <li><a class="dropdown-item" href="#">Submit a Usage Report</a></li>
             </ul>
           </li>
@@ -61,7 +61,7 @@
               Company Information
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Vendors</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/vendorinformation.html">Vendors</a></li>
               <li><a class="dropdown-item" href="#">Warranty Divisions</a></li>
             </ul>
           </li>
