--- a/src/main/resources/templates/submitworkorder.html
+++ b/src/main/resources/templates/submitworkorder.html
@@ -13,6 +13,7 @@
 
 <body>
   <h1>Submit a Workorder</h1>
+  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h4>Enter the details for the new Workorder</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/submitorder}" th:object="${Workorder}">
