--- a/src/main/resources/templates/technicianworkreport.html
+++ b/src/main/resources/templates/technicianworkreport.html
@@ -12,28 +12,32 @@
     crossorigin="anonymous"
   >
   <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/Submitworkorder.css">
-  <title>Part Information</title>
+  <title>Technician Work Report</title>
 </head>
 
 <body>
   <main>
-  <h1>Add a new Part's details</h1>
+  <h1>Add a new Technician Work Report's details</h1>
   <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
-  <h2>Data of an Part will be taken from this page and submitted into both 
-        PartList and PartDesciption tables</h2>
-  <h4>Enter the details for the new Part</h4>
+  <h4>Enter the details for the new Technician Work Report</h4>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/addpart}" th:object="${Part}">
+    <form action="#" method="post" th:action="@{/addworkreport}" th:object="${WorkReport}">
       <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
 
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="PartID" 
-                th:field="*{PartID}" placeholder="Id of the Part" required />
+      <input style="font-family: Quicksand, sans-serif;" type="number" id="StaffID" 
+                th:field="*{StaffID}" placeholder="Id of the Technician" required />
       <br>
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="PartName" 
-                th:field="*{PartName}" placeholder="Name of the Part" required />
+      <input style="font-family: Quicksand, sans-serif;" type="number" id="OrderNumber" 
+                th:field="*{OrderNumber}" placeholder="Order Number of the Work Report" required />
       <br>
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="PartDescription" 
-                th:field="*{PartDescription}" placeholder="Description of the Part" required />
+      <input style="font-family: Quicksand, sans-serif;" type="text" id="Message" 
+                th:field="*{Message}" placeholder="Message of the Work Report" required />
+      <br>
+      <input style="font-family: Quicksand, sans-serif;" type="date" id="Date" 
+                th:field="*{Date}" placeholder="Date of the Work Report" required />
+      <br>
+      <input style="font-family: Quicksand, sans-serif;" type="number" id="CustID" 
+                th:field="*{CustID}" placeholder="Id of the Customer" required />
       <br>
 
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
