--- a/src/main/resources/templates/certificationsinformation.html
+++ b/src/main/resources/templates/certificationsinformation.html
@@ -12,7 +12,7 @@
 <body>
   <main>
   <h1>Add a new Certifications's details</h1>
-  <h2></h2>
+  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h4>Enter the details for the new Certifications</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addcertifications}" th:object="${Certification}">
