--- a/src/main/resources/templates/staffinformation.html
+++ b/src/main/resources/templates/staffinformation.html
@@ -12,6 +12,7 @@
 <body>
   <main>
   <h1>Add a new staff member's details</h1>
+  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h2>Data of an Employee will be taken from this page and submitted into both 
         StaffRoles and StaffDetails tables</h2>
   <h4>Enter the details for the new staff member</h4>
