finished adding all html templates and menu

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -53,7 +53,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="/src/main/resources/templates/partinformation.html">Parts</a></li>
               <li><a class="dropdown-item" href="/src/main/resources/templates/toolinformation.html">Tools</a></li>
-              <li><a class="dropdown-item" href="#">Submit a Usage Report</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/usagereport.html">Submit a Usage Report</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -62,7 +62,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="/src/main/resources/templates/vendorinformation.html">Vendors</a></li>
-              <li><a class="dropdown-item" href="#">Warranty Divisions</a></li>
+              <li><a class="dropdown-item" href="/src/main/resources/templates/warrantydivisoninformation.html">Warranty Divisions</a></li>
             </ul>
           </li>
         </ul>
