--- a/src/main/resources/templates/usagereport.html
+++ b/src/main/resources/templates/usagereport.html
@@ -12,31 +12,26 @@
     crossorigin="anonymous"
   >
   <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/Submitworkorder.css">
-  <title>Staff Information</title>
+  <title>Tool Usage Report</title>
 </head>
 
 <body>
   <main>
-  <h1>Add a new staff member's details</h1>
+  <h1>Add a new Usage Report's details</h1>
   <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
-  <h2>Data of an Employee will be taken from this page and submitted into both 
-        StaffRoles and StaffDetails tables</h2>
-  <h4>Enter the details for the new staff member</h4>
+  <h4>Enter the details for the new Usage Report</h4>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/addemployee}" th:object="${Employee}">
+    <form action="#" method="post" th:action="@{/addmakesuseof}" th:object="${MakesUseOf}">
       <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
 
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="Id" 
-                th:field="*{Id}" placeholder="Id of the employee" required />
+      <input style="font-family: Quicksand, sans-serif;" type="number" id="ToolID" 
+                th:field="*{ToolID}" placeholder="Id of the Tool" required />
       <br>
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="Name" 
-                th:field="*{Name}" placeholder="Name of the employee" required />
+      <input style="font-family: Quicksand, sans-serif;" type="number" id="RepairID" 
+                th:field="*{RepairID}" placeholder="Id of the Work Report" required />
       <br>
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="PhoneNumber" 
-                th:field="*{PhoneNumber}" placeholder="Phone number of the employee" required />
-      <br>
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="Role" 
-                th:field="*{Role}" placeholder="Role of the employee" required />
+      <input style="font-family: Quicksand, sans-serif;" type="text" id="UsageReport" 
+                th:field="*{UsageReport}" placeholder="Message of the Usage Report" required />
       <br>
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
