--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,14 +8,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/SMD.css">
+  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/NavBar.css">
   <title>SMD Home</title>
 
 </head>
 
 <body>
-  <Div>
+  <h1>
     Welcome to the Service Management Database Home Page
-  </Div>
+  </h1>
+  <div class="TopBar"> NAVIGATE:</div>
 </body>
 
 </html>
