--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
   <h1>
     Welcome to the Service Management Database Home Page
   </h1>
-  <div class="TopBar"> NAVIGATE:</div>
+  <div class="TopBar" style="position:fixed;bottom:10;width:90%"></div>
 </body>
 
 </html>
