--- a/src/main/resources/templates/usageReportSubmit.html
+++ b/src/main/resources/templates/usageReportSubmit.html
@@ -22,14 +22,15 @@
   <h4>Enter the details for the new Usage Report</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addmakesuseof}" th:object="${MakesUseOf}">
-      <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
-
+      <div class="form-name">Tool Id</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="ToolID" 
                 th:field="*{ToolID}" placeholder="Id of the Tool" required />
       <br>
+      <div class="form-name">Work Report Id</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="RepairID" 
                 th:field="*{RepairID}" placeholder="Id of the Work Report" required />
       <br>
+      <div class="form-name">Message</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="UsageReport" 
                 th:field="*{UsageReport}" placeholder="Message of the Usage Report" required />
       <br>
