--- a/src/main/resources/templates/WarrantyClaimSubmit.html
+++ b/src/main/resources/templates/WarrantyClaimSubmit.html
@@ -22,11 +22,11 @@
   <h4>Enter the details for the new Warranty Claim</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addwarrantyclaim}" th:object="${WarrantyClaim}">
-      <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
-
+      <div class="form-name">Id</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="WarrantyID" 
                 th:field="*{WarrantyID}" placeholder="Id of the Warranty" required />
       <br>
+      <div class="form-name">Brand</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="Brand" 
                 th:field="*{Brand}" placeholder="Brand of the Warranty" required />
       <br>
