--- a/src/main/resources/templates/staffSubmit.html
+++ b/src/main/resources/templates/staffSubmit.html
@@ -24,17 +24,19 @@
   <h4>Enter the details for the new staff member</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addemployee}" th:object="${Employee}">
-      <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
-
+      <div class="form-name">Id</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="Id" 
                 th:field="*{Id}" placeholder="Id of the employee" required />
       <br>
+      <div class="form-name">Name</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="Name" 
                 th:field="*{Name}" placeholder="Name of the employee" required />
       <br>
+      <div class="form-name">Number</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="PhoneNumber" 
                 th:field="*{PhoneNumber}" placeholder="Phone number of the employee" required />
       <br>
+      <div class="form-name">Role</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="Role" 
                 th:field="*{Role}" placeholder="Role of the employee" required />
       <br>
