--- a/src/main/resources/templates/toolSubmit.html
+++ b/src/main/resources/templates/toolSubmit.html
@@ -22,11 +22,11 @@
   <h4>Enter the details for the new Tool</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addtool}" th:object="${Tool}">
-      <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
-
+      <div class="form-name">Id</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="ToolID" 
                 th:field="*{ToolID}" placeholder="Id of the Tool" required />
       <br>
+      <div class="form-name">Name</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="ToolName" 
                 th:field="*{ToolName}" placeholder="Name of the Tool" required />
       <br>
