--- a/src/main/resources/templates/vendorSubmit.html
+++ b/src/main/resources/templates/vendorSubmit.html
@@ -22,14 +22,15 @@
   <h4>Enter the details for the new Vendor</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addvendor}" th:object="${Vendor}">
-      <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
-
+      <div class="form-name">Name</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="VendorName" 
                 th:field="*{VendorName}" placeholder="Name of the Vendor" required />
       <br>
+      <div class="form-name">Contact Information</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="EmailContact" 
                 th:field="*{EmailContact}" placeholder="Contact Information of the Vendor" required />
       <br>
+      <div class="form-name">Billing and Shipping Address</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="BillingShippingAddress" 
                 th:field="*{BillingShippingAddress}" placeholder="Billing and Shipping Address of the Part" required />
       <br>
