--- a/src/main/resources/templates/warrantyDivisonSubmit.html
+++ b/src/main/resources/templates/warrantyDivisonSubmit.html
@@ -22,11 +22,11 @@
   <h4>Enter the details for the new Warranty Divison</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addwarrantydivison}" th:object="${WarrantyDivison}">
-      <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
-
+      <div class="form-name">Brand</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="Brand" 
                 th:field="*{Brand}" placeholder="Brand of the Warranty Divison" required />
       <br>
+      <div class="form-name">Contact Information</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="EmailContact" 
                 th:field="*{EmailContact}" placeholder="Contact Information of the Warranty Divison" required />
       <br>
