--- a/src/main/resources/templates/workOrderSubmit.html
+++ b/src/main/resources/templates/workOrderSubmit.html
@@ -22,20 +22,23 @@
   <h4>Enter the details for the new Work Order</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/addworkorder}" th:object="${WorkOrder}">
-      <div class="form-name">Name<sup>*</sup></div> <!-- Question: What does this line do? -->
-
+      <div class="form-name">Order Number</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="OrderNumber" 
                 th:field="*{OrderNumber}" placeholder="Order Number of the Work Order" required />
       <br>
+      <div class="form-name">Date Submitted</div> 
       <input style="font-family: Quicksand, sans-serif;" type="date" id="DateSubmitted" 
                 th:field="*{DateSubmitted}" placeholder="Date Submitted the Work Order" required />
       <br>
+      <div class="form-name">Date Completed</div> 
       <input style="font-family: Quicksand, sans-serif;" type="date" id="DateCompleted" 
                 th:field="*{DateCompleted}" placeholder="Date Completed the Work Order" required />
       <br>
+      <div class="form-name">Customer Id</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="CustIdentifier" 
                 th:field="*{CustIdentifier}" placeholder="Id of the Customer" required />
       <br>
+      <div class="form-name">Warranty Claim Id</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="ClaimID" 
                 th:field="*{ClaimID}" placeholder="Id of the Warranty Claim" required />
       <br>
