--- a/src/main/resources/templates/partSubmit.html
+++ b/src/main/resources/templates/partSubmit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/NavBar :: NavBar}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/NavBar :: NavBar}"></html>
 
 <head>
   <meta charset="UTF-8">
