--- a/src/main/resources/templates/workOrderView.html
+++ b/src/main/resources/templates/workOrderView.html
@@ -40,11 +40,11 @@
   <div class="db-container">
     <h1 style="font-weight: bolder;">Work Orders</h1><br>
 
-    <table id="WorkItemViewtable"class="styled-table">
+    <table id="WorkOrderViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name" style="border-top-left-radius: 7px;">Claim ID</th>
-        <th class="header-name" >Customer Name</th>
-        <th class="header-name">Start Date</th>
+        <th class="header-name">Claim ID |</th>
+        <th class="header-name" >Customer Name |</th>
+        <th class="header-name">Start Date |</th>
         <th class="header-name">Description</th>
         
         <tr th:each="n:${WorkOrder}">
@@ -55,5 +55,11 @@
         </tr>
     </table>
   </div>
+  <script type="text/javascript"></script>
+  <script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
+    crossorigin="anonymous">
+  </script>
 </body>
 </html>
