--- a/src/main/resources/public/stylesheets/NavBar.css
+++ b/src/main/resources/public/stylesheets/NavBar.css
@@ -7,14 +7,14 @@
   width: 100%;
   overflow: visible;
   z-index: 5;
-  background: #00196A;
+  background: #ffffff;
   height: 66px;
 }
 
 /* Dropdown Button */
 .dropbtn {
   font-family: "Quicksand", sans-serif;
-  background-color: #00196A;
+  background-color: #e4e8f4;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -27,7 +27,7 @@
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   font-family: "Quicksand", sans-serif;
-  background-color: #00196A;
+  background-color: #d9dce5;
   position: relative;
   right: 0px;
   display:block;
@@ -65,7 +65,7 @@
 .dropdown-content a:hover {
   font-family: "Quicksand", sans-serif;
   color: white;
-  background-color: #00196A;
+  background-color: #c0c4cf;
   opacity: 0.8;
 }
 
@@ -73,7 +73,7 @@
 .dropdown:hover .dropbtn {
   font-family: "Quicksand", sans-serif;
   color: white;
-  background-color: #00196A;
+  background-color: #ced1d8;
   opacity: 0.8;
 }
 
@@ -85,7 +85,7 @@
 
 .linkbutton {
   font-family: "Quicksand", sans-serif;
-  background-color: #00196A;
+  background-color: #d4d6df;
   color: white;
   padding: 16px;
   font-size: 16px;
