--- a/src/main/resources/templates/workOrderView.html
+++ b/src/main/resources/templates/workOrderView.html
@@ -42,17 +42,18 @@
 
     <table id="WorkOrderViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name">Claim ID |</th>
+        <th class="header-name">Claim ID Hello |</th>
         <th class="header-name" >Customer Name |</th>
         <th class="header-name">Start Date |</th>
         <th class="header-name">Description</th>
         
-        <tr th:each="n:${WorkOrder}">
+        <tr th:each="n:${WorkOrder}" action="#" method="get" th:action="@{/workOrderView}">
           <td th:text="${n.ClaimID}"></td>
           <td th:text="${n.CustomerName}"></td>
           <td th:text="${n.StartDate}"></td>
           <td th:text="${n.Description}"></td>
         </tr>
+        
     </table>
   </div>
   <script type="text/javascript"></script>
