--- a/src/main/resources/templates/workOrderView.html
+++ b/src/main/resources/templates/workOrderView.html
@@ -42,7 +42,7 @@
 
     <table id="WorkOrderViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name">Claim ID Hello |</th>
+        <th class="header-name">Claim ID |</th>
         <th class="header-name" >Customer Name |</th>
         <th class="header-name">Start Date |</th>
         <th class="header-name">Description</th>
@@ -57,10 +57,5 @@
     </table>
   </div>
   <script type="text/javascript"></script>
-  <script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
-    crossorigin="anonymous">
-  </script>
 </body>
 </html>
