--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -55,7 +55,8 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" th:href="@{/vendorView}">Vendors</a></li>
-                <li><a class="dropdown-item" th:href="@{/warrantyDivsisionView}">Warranty Divisions</a></li>
+                <li><a class="dropdown-item" th:href="@{/warrantyDivisionSubmit}">Warranty Division Submit</a></li>
+                <li><a class="dropdown-item" th:href="@{/warrantyDivisionView}">Warranty Divisions</a></li>
               </ul>
             </li>
           </ul>
