added customers, fixed a bunch of bugs, fixed the ability to view customers, made the database match the actual closer, added a requirement to submitting workorders

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'error')}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/NavBar :: NavBar}"></html>
 
   <body>
     <p th:text="${message}">Exception message</p>
