--- a/src/main/resources/templates/workOrderSubmit.html
+++ b/src/main/resources/templates/workOrderSubmit.html
@@ -15,6 +15,7 @@
   <title>Submit Work Order</title>
 </head>
 
+
 <body>
   <main>
   <h1>Add a new Work Order's details</h1>
@@ -22,9 +23,14 @@
   <div class="form-data">
     <form action="#" method="post" th:action="@{/workOrderSubmitForm}" th:object="${WorkOrder}">
       <div class="form-name">Start Date: <input style="font-family: Quicksand, sans-serif;" type="date" id="DateSubmitted" th:field="*{StartDate}" placeholder="Date Submitted the Work Order" required /></div>
-      <div class="form-name">CustName: <input style="font-family: Quicksand, sans-serif;" type="text" id="CustName" th:field="*{CustomerName}" placeholder="Date Submitted the Work Order" required /></div>
-      <div class="form-name">Description of Fault: <input style="font-family: Quicksand, sans-serif;" type="text" id="CustName" th:field="*{Description}" placeholder="Date Submitted the Work Order" required /></div>
-      <div class="form-name">ClaimID: <input style="font-family: Quicksand, sans-serif;" type="text" id="ClaimID" th:field="*{ClaimID}" placeholder="Date Submitted the Work Order" required /></div>
+      <div class="form-name">CustName: 
+      <select th:field="*{CustomerNum}" required>
+        <option th:each="cust : ${Customers}" th:value="${cust.CustIdentifier}" th:text="${cust.Name}"></option>
+      </select>
+      <a th:href="@{/customerSubmit}">Add New Customer</a>
+      </div>
+      <div class="form-name">Description of Fault: <input style="font-family: Quicksand, sans-serif;" type="text" id="CustName" th:field="*{Description}" placeholder="Short Description of Fault" required /></div>
+      <div class="form-name">ClaimID: <input style="font-family: Quicksand, sans-serif;" type="text" id="ClaimID" th:field="*{ClaimID}" placeholder="Warranty Claim ID" required /></div>
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
