--- a/src/main/resources/templates/customerSubmit.html
+++ b/src/main/resources/templates/customerSubmit.html
@@ -18,32 +18,14 @@
 <body>
   <main>
   <h1>Add a new Customer's details</h1>
-  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
-  <h2>Data of an Customer will be taken from this page and submitted into both 
-        Customers and AddressBook tables</h2>
+  <h2>Data of an Customer will be taken from this page and submitted into both Customers and AddressBook tables</h2>
   <h4>Enter the details for the new Customer</h4>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/addcustomer}" th:object="${Customer}">
-      <div class="form-name">Id</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="CustIdentifier" 
-                th:field="*{CustIdentifier}" placeholder="Id of the Customer" required />
-      <br>
-      <div class="form-name">Name</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="Name" 
-                th:field="*{Name}" placeholder="Name of the Customer" required />
-      <br>
-      <div class="form-name">Email</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="Email" 
-                th:field="*{Email}" placeholder="Email of the Customer" required />
-      <br>
-      <div class="form-name">Phone Number</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="PhoneNumber" 
-                th:field="*{PhoneNumber}" placeholder="Phone number of the Customer" required />
-      <br>
-      <div class="form-name">Address</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="Address" 
-                th:field="*{Address}" placeholder="Address of the Customer" required />
-      <br>
+    <form action="#" method="post" th:action="@{/customerSubmitForm}" th:object="${Customer}">
+      <div class="form-name">Name :<input style="font-family: Quicksand, sans-serif;" type="text" id="Name" th:field="*{Name}" placeholder="Name of the Customer" required /></div> 
+      <div class="form-name">Email :<input style="font-family: Quicksand, sans-serif;" type="text" id="Email" th:field="*{Email}" placeholder="Email of the Customer" required /></div> 
+      <div class="form-name">Phone Number :<input style="font-family: Quicksand, sans-serif;" type="number" id="PhoneNumber" th:field="*{PhoneNumber}" placeholder="Phone number of the Customer" required /></div> 
+      <div class="form-name">Address :<input style="font-family: Quicksand, sans-serif;" type="text" id="Address" th:field="*{Address}" placeholder="Address of the Customer" required /></div> 
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
