--- a/src/main/resources/templates/warrantyDivisionSubmit.html
+++ b/src/main/resources/templates/warrantyDivisionSubmit.html
@@ -18,18 +18,11 @@
 <body>
   <main>
   <h1>Add a new Warranty Division's details</h1>
-  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h4>Enter the details for the new Warranty Division</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/warrantyDivisionSubmitForm}" th:object="${Warrantydivison}">
-      <div class="form-name">Brand</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="Brand" 
-                th:field="*{Brand}" placeholder="Brand of the Warranty Division" required />
-      <br>
-      <div class="form-name">Contact Information</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="EmailContact" 
-                th:field="*{EmailContact}" placeholder="Contact Information of the Warranty Division" required />
-      <br>
+      <div class="form-name">Brand: <input style="font-family: Quicksand, sans-serif;" type="text" id="Brand" th:field="*{Brand}" placeholder="Brand of the Warranty Division" required /> </div> 
+      <div class="form-name">Contact Information: <input style="font-family: Quicksand, sans-serif;" type="text" id="EmailContact" th:field="*{EmailContact}" placeholder="Contact Information of the Warranty Division" required /> </div> 
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
